--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -42,7 +42,8 @@ jobs:
           REPOSITORY: ${{ env.AWS_ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $REPOSITORY:$IMAGE_TAG .
-          docker tag $REPOSITORY:$IMAGE_TAG $REGISTRY/$REPOSITORY:LATEST
+          docker build -t $REPOSITORY .
+          docker tag $REPOSITORY $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker tag $REPOSITORY $REGISTRY/$REPOSITORY:LATEST
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
           docker push $REGISTRY/$REPOSITORY:LATEST
