--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 ENVIRONMENT=dev
 
 # AWS Configuration
-AWS_ENDPOINT_URL=http://localhost:4566
+AWS_ENDPOINT_URL=http://host.docker.internal:4566
 AWS_ACCESS_KEY_ID=test
 AWS_SECRET_ACCESS_KEY=test
-REGION_NAME=ap-southeast-1
+AWS_REGION_NAME=ap-southeast-1
